<resources>
    <string name="app_name">Inventario</string>
    <string name="title_activity_home">Inicio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">" Encabezado de navegación"</string>
    <string name="action_settings">Cerrar Sesión</string>

    <string name="menu_home">Inventarios</string>
    <string name="menu_documentos">Documentos</string>
    <string name="menu_equipos">Equipos</string>
    <string name="agregar">Agregar</string>
    <string name="Consultar">Consultar</string>
    <string name="Prestamos">Prestamos</string>
    <string name="home_second">Home Second</string>
    <string name="inventario">Inventario</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="ingresar">Ingresar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">"Hola fragmento en blanco "</string>
    <string name="hint_fecha">Fecha Ingreso</string>
    <string name="hint_Compra">Fecha Compra</string>
    <string name="hint_autores">Autor/Autores</string>
    <string name="hint_modelo">Modelo</string>
    <string name="hint_Ejemplo">Ejemplo</string>
    <string name="hint_tema">Tema</string>
    <string name="hint_titulo">Titulo</string>
    <string name="hint_precio">Precio</string>
    <string name="hint_serie">Serie</string>
    <string name="hint_subtitulo">Subtitulo</string>
    <string name="hint_cantidad">Cantidad</string>
    <string name="hint_editorial">Editorial</string>
    <string name="hint_isbm">ISBN</string>
    <string name="hint_inventario">Nº Inventario</string>
    <string name="hint_palabras">Palabras Clave</string>
    <string name="hint_descripcion">Descripción</string>
    <string name="hint_years">"Cuántos años "</string>
    <string name="hint_emi">EMI ₹</string>
    <string name="hint_interest_total">" Interés total del préstamo"</string>
    <string name="buscar_documentos">Buscar Documentos</string>
    <string name="buscar_equipos">Buscar Equipos</string>
    <string name="ingrese_el_nombre_o_el_id_del_documento">Ingrese el nombre o el ID del documento</string>
    <string name="buscar_equipo">Buscar Equipos</string>
    <string name="ingrese_inventario_modelo_des">Ingrese el modelo inventario o descripcion del equipo</string>
    <string name="nuevo_documento">Nuevo Documento</string>
    <string name="prestar_documento">Prestar Documento</string>
    <string name="agregardoc">Agregar Documento</string>
    <string name="eliminardoc">Eliminar Documento</string>
    <string name="eliminarequi">Eliminar Equipo</string>
    <string name="modificardoc">Modificar Documento</string>
    <string name="modificarequi">Modificar Equipo</string>
    <string name="prestamodoc">Prestamo Documento</string>
    <string name="estado">Estado</string>
    <string name="regresar">Regresar</string>
    <string name="selectidioma">Seleccionar Idioma</string>
    <string name="selectcategoria">Seleccionar Categoria</string>
    <string name="selectmotivo">Seleccionar Motivo</string>
    <string name="marca">Seleccionar Marca</string>
    <string name="selectescuela">Seleccionar Escuela</string>
    <string name="selectdocente">Seleccionar Docentes</string>
    <string name="prestamociclo">Prestamo Ciclo</string>
    <string name="definitiva">Asignacion Definitiva</string>
    <string name="fechaprestamo">Fecha de Prestamo</string>
    <string name="fechadevolucion">Fecha de Devolución</string>
    <string name="observaciones">  Observaciones</string>
    <string name="areas">Seleccionar Area</string>
    <string name="accion">Realizar Acción</string>
    <string name="agregarequi">Agregar Equipo</string>


</resources>
